BUG:z-index

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
 }
 .images > img.leave{
     transform: translateX(-100%);
-    z-index: 1;
 }
 .images > img.enter{ 
     transform: translateX(100%);
